--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 </head>
 <body>
     <header>
-        <h1>lib vs lie</h1>
-        <p>Is it lib vs just a lie? You decide!</p>
+        <h1>Lib vs Lie</h1>
+        <p>The Ultimate Test of Woke Logic vs Absurdity!<p>
     </header>
     
     <main>
         <!-- Game Instructions Page -->
         <div id="intro-page" class="intro-page">
-            <h2>Welcome to lib vs lie!</h2>
-            <p>In this game, you'll be presented with a quote. You need to guess if it's "lib" vs "lie" After each guess, you'll get feedback.</p>
+            <h2>Welcome to Lib vs Lie!</h2>
+            <p>In this game, you'll be presented with a quote. Try to guess if the quote is real, or if it is made up!</p>
             <p>Click "Start" to begin.</p>
             <button id="start-button">Start</button>
         </div>
@@ -27,8 +27,8 @@
                 <p id="main-quote">Quote will appear here...</p>
             </div>
             <div class="buttons">
-                <button id="lib-button">lib</button>
-                <button id="lie-button">lie</button>
+                <button id="lib-button">Real</button>
+                <button id="lie-button">Fake</button>
             </div>
             <div id="feedback-container" class="feedback-container" style="display: none;">
                 <p id="feedback-message"></p>
@@ -36,8 +36,7 @@
                 <button id="next-button" style="display: none;">Next</button>
             </div>
             <div id="score-board" class="score-board">
-                <p id="score">Score: 0</p>
-                <p id="remaining-quotes">Remaining Quotes: 5</p>
+                <p id="score">Score: 0/0</p>
             </div>
         </div>
 
