--- a/LibVsLie/Project Files/index.html
+++ b/LibVsLie/Project Files/index.html
@@ -3,20 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>lib vs lie</title>
+    <title>Lib vs Lie</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <h1>Lib vs Lie</h1>
         <p>The Ultimate Test of Woke Logic vs Absurdity!<p>
+        <p> <p> 
     </header>
     
     <main>
         <!-- Game Instructions Page -->
         <div id="intro-page" class="intro-page">
             <h2>Welcome to Lib vs Lie!</h2>
-            <p>In this game, you'll be presented with a quote. Try to guess if the quote is real, or if it is made up!</p>
+            <p>Correctly Choose if the Quote is Real or Fake to Increase Your Score<p>
+            <p>Keep Going Till You Get One Wrong!</p> 
             <p>Click "Start" to begin.</p>
             <button id="start-button">Start</button>
         </div>
@@ -32,7 +34,7 @@
             </div>
             <div id="feedback-container" class="feedback-container" style="display: none;">
                 <p id="feedback-message"></p>
-                <p id="quote-source" style="display: none;">Source: <span id="source-text"></span></p>
+                <p id="quote-source" style="display: none;"><span id="source-text"></span></p>
                 <button id="next-button" style="display: none;">Next</button>
             </div>
             <div id="score-board" class="score-board">
@@ -44,11 +46,34 @@
         <div id="game-over-page" class="game-over-page" style="display: none;">
             <h2>Game Over!</h2>
             <p id="final-score">Your Score: 0</p>
-            <div class="buttons">
-                <button id="share-score-button">Share Score</button>
-                <button id="try-again-button">Try Again</button>
+            <div id="game-over-quote-source" style="display: none;">
+                <span id="game-over-source-text"></span>
             </div>
+            <button id="share-button">Share Score</button>
+            <button id="retry-button">Try Again</button>
         </div>
+
+        <!-- Game End Screen 2 (Initially Hidden) -->
+        <div id="game-over-page2" class="game-over-page" style="display: none;">
+            <h2>Game Over! The Quote was Fake!</h2>
+            <p id="baited-text"></p>
+            <div id="game-over-page2-quote-source" style="display: none;">
+                <span id="game-over-page2-source-text"></span>
+            </div>
+            <button id="share-button2">Share Score</button>
+            <button id="retry-button2">Try Again</button>
+        </div>
+
+        <!-- Game Over Page 3 (Initially Hidden) -->
+        <div id="game-over-page3" class="game-over-page" style="display: none;">
+            <h2>Game Over! It was Real!</h2>
+            <div id="game-over-page3-quote-source" style="display: none;">
+                <span id="game-over-page3-source-text"></span>
+            </div>
+            <button id="share-button3">Share Score</button>
+            <button id="retry-button3">Try Again</button>
+        </div>
+</div>
     </main>
 
     <footer>
