--- a/LibVsLie/Project Files/index.html
+++ b/LibVsLie/Project Files/index.html
@@ -44,7 +44,7 @@
 
         <!-- Game Over Page (Initially Hidden) -->
         <div id="game-over-page" class="game-over-page" style="display: none;">
-            <h2>Game Over!</h2>
+            <h2>Game Over! We Made it All Up!</h2>
             <p id="final-score">Your Score: 0</p>
             <div id="game-over-quote-source" style="display: none;">
                 <span id="game-over-source-text"></span>
