--- a/LibVsLie/Project Files/index.html
+++ b/LibVsLie/Project Files/index.html
@@ -12,7 +12,6 @@
         <p>The Ultimate Test of Woke Logic vs Absurdity!<p>
         <p> <p> 
     </header>
-    
     <main>
         <!-- Game Instructions Page -->
         <div id="intro-page" class="intro-page">
@@ -34,12 +33,16 @@
             </div>
             <div id="feedback-container" class="feedback-container" style="display: none;">
                 <p id="feedback-message"></p>
-                <p id="quote-source" style="display: none;"><span id="source-text"></span></p>
-                <button id="next-button" style="display: none;">Next</button>
+            </div>
+            <div class="source-next-container" style="display: none;">
+                <div class="source-next-inner">
+                    <button id="source-button">Source</button>
+                    <button id="next-button">Next</button>
+                </div>
             </div>
             <div id="score-board" class="score-board">
                 <p id="score">Score: 0/0</p>
-            </div>
+            </div>                     
         </div>
 
         <!-- Game Over Page (Initially Hidden) -->
