Fixing up end game options again

--- a/LibVsLie/Project Files/index.html
+++ b/LibVsLie/Project Files/index.html
@@ -60,27 +60,21 @@
         <div id="game-over-page2" class="game-over-page" style="display: none;">
             <h2>Game Over! The Quote was Fake!</h2>
             <p id="baited-text"></p>
-            <div id="game-over-page2-quote-source" style="display: none;">
-                <span id="game-over-page2-source-text"></span>
+            <div id="source-container2" class="source-next-container" style="display: none; margin-bottom: 7px;">
+                <button id="source-button2">Go to Source</button>
             </div>
             <button id="share-button2">Share Score</button>
             <button id="retry-button2">Try Again</button>
-            <div id="source-container2" style="display: none; margin-top: 5px;">
-                <button id="source-button2">Go to Source</button>
-            </div>
         </div>
 
         <!-- Game Over Page 3 (Initially Hidden) -->
         <div id="game-over-page3" class="game-over-page" style="display: none;">
             <h2>Game Over! It was Real!</h2>
-            <div id="game-over-page3-quote-source" style="display: none;">
-                <span id="game-over-page3-source-text"></span>
+            <div id="source-container3" class="source-next-container" style="display: none; margin-bottom: 7px;">
+                <button id="source-button3">Go to Source</button>
             </div>
             <button id="share-button3">Share Score</button>
             <button id="retry-button3">Try Again</button>
-            <div id="source-container3" style="display: none; margin-top: 5px;">
-                <button id="source-button3">Go to Source</button>
-            </div>
         </div>
         </div>
     </main>
