Tidying up Sources, adding instructions during gameplay

--- a/LibVsLie/Project Files/index.html
+++ b/LibVsLie/Project Files/index.html
@@ -24,6 +24,7 @@
 
         <!-- Quote Guessing Page (Initially Hidden) -->
         <div id="game-page" class="game-page" style="display: none;">
+            <h3>Is this a real quote, or is it made up?</h3>
             <div class="quote-container">
                 <p id="main-quote">Quote will appear here...</p>
             </div>
