--- a/LibVsLie/Project Files/index.html
+++ b/LibVsLie/Project Files/index.html
@@ -6,7 +6,7 @@
     <title>Lib vs Lie</title>
     <link rel="stylesheet" href="style.css">
 
-<!-- Google Analytics & Adsense-->
+<!-- Google analytics & Adsense-->
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8572919656547682"
     crossorigin="anonymous"></script>
     <!-- Google tag (gtag.js) -->
